force-app/main/default/objects/maps__LiveSummaryStateMileage__c/maps__LiveSummaryStateMileage__c.object-meta.xml
<CustomObject>
    <label>Maps Live Summary State Mileage</label>
    <nameField>
        <label>Maps Live Summary State Mileage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Summary State Mileages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>