force-app/main/default/objects/maps__LiveSummaryStateMileage__c/fields/maps__LiveAssetDailySummary__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveAssetDailySummary__c</fullName>
    <description>Live Asset Daily Summary record to which this mileage relates</description>
    <inlineHelpText>Live Asset Daily Summary record to which this mileage relates</inlineHelpText>
    <label>Live Asset Daily Summary</label>
    <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
    <relationshipLabel>Live Summary State Mileages</relationshipLabel>
    <relationshipName>LiveSummaryStateMileages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>