force-app/main/default/objects/maps__LiveSummaryStateMileage__c/fields/maps__TotalDistanceTraveledKm__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalDistanceTraveledKm__c</fullName>
    <label>Total Distance Traveled (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>