force-app/main/default/objects/maps__LiveSummaryStateMileage__c/fields/maps__TotalDistanceTraveledMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalDistanceTraveledMiles__c</fullName>
    <description>Total distance traveled in miles within this state.</description>
    <formula>ROUND(maps__TotalDistanceTraveledKm__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total distance traveled in miles within this state.</inlineHelpText>
    <label>Total Distance Traveled (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>